# llama2-high-level-cpp

./: .gitignore  .gn  BUILD.gn  LICENSE  README.md  export_llama2_c_weights.cc  original_llama2_run.c
scripts/: bootstrap.py  build.py
secondary/: README
src/: decoder.cc  decoder.h  embedding.cc  embedding.h  feed_forward.cc  feed_forward.h  inference.cc  model_common.h  self_attention.cc  self_attention.h  tensor.h  transformer.cc  transformer.h
